# openAPI-CSCS-v2.yml
@@ -138,7 +138,7 @@ paths:
                                 example: Unexpected error
 
     # dataSource endpoints
-    /api/v1/file/download/{jobid}/{filename}:
+    /api/v1/file/download/{jobid}:
         get:
             security:
                 - bearerAuth: []
@@ -150,7 +150,7 @@ paths:
                   schema:
                       type: string
                   required: true
-                - in: path
+                - in: query
                   name: filename
                   schema:
                       type: string
@@ -203,7 +203,7 @@ paths:
                 '400':
                     description: Bad Request
 
-    /api/v1/file/delete/{jobid}/{filename}:
+    /api/v1/file/delete/{jobid}:
         delete:
             security:
                 - bearerAuth: []
@@ -215,7 +215,7 @@ paths:
                   schema:
                       type: string
                   required: true
-                - in: path
+                - in: query
                   name: filename
                   schema:
                       type: string
